# expectrl

./: .appveyor.yml  .cirrus.yml  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  cirrus_ci.yml  coverage.yml  win.yml  windows.yml
examples/: bash.rs  bash_control.rs  check.rs  expect_line.rs  ftp.rs  ftp_interact.rs  interact.rs  interact_with_callback.rs  interact_with_callbacks.rs  log.rs  ping.rs  powershell.rs  python.rs  shell.rs
src/: async_session.rs  async_stream.rs  captures.rs  check_macros.rs  control_code.rs  error.rs  expect.rs  found.rs  interact.rs  lib.rs  log.rs  needle.rs  process.rs  repl.rs  session.rs  session_stream.rs  stream.rs
src/interact/: context.rs  mod.rs  opts.rs  session.rs
src/interact/actions/: lookup.rs  mod.rs
src/process/: async_stream.rs  mod.rs  unix.rs  windows.rs
src/session/: async_session.rs  async_stream.rs  mod.rs  pty_session.rs  session.rs  stream.rs  sync_session.rs  sync_stream.rs
src/stream/: async_stream.rs  empty.rs  log.rs  mod.rs  stdin.rs  stream.rs  unix.rs  windows.rs
src/waiter/: blocking.rs  mod.rs  wait.rs
tests/: check.rs  expect.rs  interact.rs  io.rs  is_matched.rs  log.rs  repl.rs  repl_async.rs  session.rs  session_async.rs  session_win.rs
tests/actions/cat/: main.py
tests/actions/echo/: main.py
tests/source/: ansi.py  colors.py
