[package]
name = "expectrl"
version = "0.5.0"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2018"
description = "A tool for automating terminal applications in Unix like Don libes expect"
repository = "https://github.com/zhiburt/expectrl"
homepage = "https://github.com/zhiburt/expectrl"
documentation = "https://docs.rs/expectrl"
license = "MIT"
categories = ["development-tools::testing", "os::unix-apis", "os::windows-apis"]
keywords = ["expect", "pty", "testing", "terminal", "automation"]
readme = "README.md"

# It's necessary only for Windows, because of `Command::get_*` functions.
# Unix build can be done on older versions
rust-version = "1.57"

[features]
async = ["futures-lite", "futures-timer", "async-io", "blocking"]

[dependencies]
regex = "1.5.4"
futures-lite = { version = "1.12.0", optional = true }
futures-timer = { version = "3.0.2", optional = true }

[target.'cfg(windows)'.dependencies]
conpty = "0.3.0"
blocking = { version = "1.2.0", optional = true }

[target.'cfg(unix)'.dependencies]
ptyprocess = "0.3.0"
nix = "0.23.1"
async-io = { version = "1.6.0", optional = true }

[package.metadata.docs.rs]
all-features = false
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options"]
features = ["unstable-doc"]
