[package]
name = "expectrl"
version = "0.5.2"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2021"
resolver = "2"
description = "A tool for automating terminal applications in Unix like Don libes expect"
repository = "https://github.com/zhiburt/expectrl"
homepage = "https://github.com/zhiburt/expectrl"
documentation = "https://docs.rs/expectrl"
license = "MIT"
categories = ["development-tools::testing", "os::unix-apis", "os::windows-apis"]
keywords = ["expect", "pty", "testing", "terminal", "automation"]
readme = "README.md"

[features]
# this feature makes scence only when async is off
polling = ["dep:polling"]
async = ["futures-lite", "futures-timer", "async-io", "blocking"]

[dependencies]
# move behind the future
regex = "1.5.4"
futures-lite = { version = "1.12.0", optional = true }
futures-timer = { version = "3.0.2", optional = true }

[target.'cfg(unix)'.dependencies]
ptyprocess = "0.3.0"
nix = "0.23.1"
async-io = { version = "1.6.0", optional = true }
polling = { version = "2.3.0", optional = true }

[target.'cfg(windows)'.dependencies]
conpty = "0.3.0"
blocking = { version = "1.2.0", optional = true }

[package.metadata.docs.rs]
all-features = false
